--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ongzuchengmark.github.io<\title>
-  <\head>
+    <title>ongzuchengmark.github.io</title>
+  </head>
   <body>
     <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages.</p>
